加上語料總字數計算

--- a/中文字過濾.ipynb
+++ b/中文字過濾.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -65,6 +65,56 @@
     "regex = re.compile(u'''[\\u4E00-\\u9fa5]''')\n",
     "L=regex.findall(ch)\n",
     "print json.dumps(L,ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1007 [\"春\", \"節\", \"的\", \"生\", \"命\", \"力\", \"文\", \"•\", \"滕\", \"淑\", \"芬\", \"年\", \"味\", \"越\", \"來\", \"越\", \"淡\", \"了\", \"？\", \"似\", \"乎\", \"不\", \"少\", \"人\", \"都\", \"有\", \"此\", \"感\", \"受\", \"。\", \"都\", \"會\", \"區\", \"裡\", \"，\", \"貼\", \"春\", \"聯\", \"的\", \"人\", \"家\", \"少\", \"了\", \"，\", \"祭\", \"祖\", \"的\", \"也\", \"不\", \"多\", \"，\", \"春\", \"節\", \"真\", \"的\", \"變\", \"成\", \"一\", \"個\", \"普\", \"通\", \"的\", \"假\", \"日\", \"嗎\", \"？\", \"農\", \"曆\", \"年\", \"前\", \"，\", \"104\", \"人\", \"力\", \"銀\", \"行\", \"的\", \"調\", \"查\", \"發\", \"現\", \"，\", \"將\", \"近\", \"一\", \"半\", \"（\", \"45.6\", \"%\", \"）\", \"的\", \"上\", \"班\", \"族\", \"對\", \"「\", \"準\", \"備\", \"過\", \"年\", \"」\", \"感\", \"到\", \"焦\", \"慮\", \"，\", \"焦\", \"慮\", \"主\", \"要\", \"來\", \"自\", \"「\", \"大\", \"掃\", \"除\", \"和\", \"做\", \"家\", \"事\", \"（\", \"62.7\", \"%\", \"）\", \"」\", \"、\", \"「\", \"準\", \"備\", \"紅\", \"包\", \"（\", \"57\", \"%\", \"）\", \"」\", \"，\", \"以\", \"及\", \"「\", \"想\", \"到\", \"又\", \"過\", \"了\", \"一\", \"年\", \"自\", \"己\", \"卻\", \"沒\", \"有\", \"長\", \"進\", \"（\", \"34.2\", \"%\", \"）\", \"」\", \"等\", \"。\", \"做\", \"家\", \"事\", \"，\", \"想\", \"當\", \"然\", \"爾\", \"，\", \"是\", \"女\", \"主\", \"人\", \"的\", \"煩\", \"惱\", \"，\", \"男\", \"主\", \"人\", \"則\", \"可\", \"能\", \"因\", \"口\", \"袋\", \"不\", \"夠\", \"深\", \"，\", \"但\", \"又\", \"得\", \"扮\", \"演\", \"「\", \"散\", \"財\", \"童\", \"子\", \"」\", \"角\", \"色\", \"，\", \"心\", \"情\", \"格\", \"外\", \"沉\", \"重\", \"。\", \"至\", \"於\", \"年\", \"假\", \"有\", \"何\", \"計\", \"畫\", \"？\", \"104\", \"的\", \"調\", \"查\", \"顯\", \"示\", \"，\", \"43.8\", \"%\", \"的\", \"人\", \"想\", \"「\", \"在\", \"家\", \"補\", \"眠\", \"」\", \"，\", \"其\", \"次\", \"是\", \"「\", \"國\", \"內\", \"旅\", \"遊\", \"（\", \"32\", \"%\", \"）\", \"」\", \"、\", \"「\", \"回\", \"老\", \"家\", \"團\", \"聚\", \"（\", \"27\", \"%\", \"）\", \"」\", \"。\", \"這\", \"項\", \"調\", \"查\", \"與\", \"我\", \"們\", \"的\", \"封\", \"面\", \"主\", \"題\", \"相\", \"呼\", \"應\", \"，\", \"對\", \"已\", \"婚\", \"婦\", \"女\", \"、\", \"單\", \"親\", \"、\", \"單\", \"身\", \"（\", \"包\", \"括\", \"同\", \"志\", \"）\", \"、\", \"弱\", \"勢\", \"與\", \"新\", \"移\", \"民\", \"家\", \"庭\", \"而\", \"言\", \"，\", \"因\", \"身\", \"分\", \"處\", \"境\", \"與\", \"經\", \"濟\", \"壓\", \"力\", \"的\", \"差\", \"異\", \"，\", \"年\", \"關\", \"，\", \"確\", \"實\", \"是\", \"他\", \"/\", \"她\", \"們\", \"的\", \"「\", \"天\", \"下\", \"第\", \"一\", \"關\", \"」\", \"。\", \"值\", \"此\", \"親\", \"人\", \"歡\", \"聚\", \"時\", \"刻\", \"，\", \"更\", \"要\", \"送\", \"上\", \"溫\", \"暖\", \"問\", \"候\", \"。\", \"也\", \"許\", \"年\", \"味\", \"不\", \"再\", \"那\", \"麼\", \"濃\", \"厚\", \"，\", \"但\", \"現\", \"代\", \"人\", \"真\", \"的\", \"不\", \"喜\", \"歡\", \"過\", \"年\", \"嗎\", \"？\", \"那\", \"麼\", \"，\", \"為\", \"什\", \"麼\", \"有\", \"人\", \"會\", \"開\", \"始\", \"擔\", \"心\", \"：\", \"「\", \"春\", \"節\", \"會\", \"不\", \"會\", \"消\", \"亡\", \"？\", \"」\", \"去\", \"年\", \"曾\", \"有\", \"大\", \"陸\", \"媒\", \"體\", \"因\", \"中\", \"國\", \"經\", \"濟\", \"快\", \"速\", \"發\", \"展\", \"，\", \"導\", \"致\", \"人\", \"際\", \"關\", \"係\", \"冷\", \"漠\", \"、\", \"疏\", \"離\", \"，\", \"家\", \"庭\", \"結\", \"構\", \"「\", \"割\", \"裂\", \"」\", \"，\", \"憂\", \"慮\", \"「\", \"春\", \"節\", \"的\", \"生\", \"命\", \"力\", \"」\", \"，\", \"會\", \"不\", \"會\", \"逐\", \"漸\", \"消\", \"失\", \"？\", \"而\", \"興\", \"起\", \"一\", \"陣\", \"維\", \"護\", \"傳\", \"統\", \"文\", \"化\", \"價\", \"值\", \"的\", \"熱\", \"烈\", \"討\", \"論\", \"。\", \"美\", \"食\", \"作\", \"家\", \"韓\", \"良\", \"露\", \"曾\", \"談\", \"到\", \"她\", \"兒\", \"時\", \"濃\", \"濃\", \"的\", \"年\", \"味\", \"，\", \"來\", \"台\", \"五\", \"代\", \"，\", \"住\", \"在\", \"台\", \"南\", \"的\", \"阿\", \"嬤\", \"，\", \"為\", \"祭\", \"拜\", \"神\", \"明\", \"，\", \"虔\", \"誠\", \"炊\", \"蒸\", \"紅\", \"龜\", \"粿\", \"；\", \"除\", \"夕\", \"夜\", \"，\", \"父\", \"親\", \"會\", \"拿\", \"出\", \"早\", \"先\", \"做\", \"好\", \"的\", \"糯\", \"米\", \"甘\", \"酒\", \"釀\", \"，\", \"加\", \"水\", \"溫\", \"熱\", \"、\", \"再\", \"沖\", \"上\", \"雞\", \"蛋\", \"，\", \"香\", \"甜\", \"酒\", \"釀\", \"是\", \"守\", \"歲\", \"的\", \"點\", \"心\", \"；\", \"大\", \"年\", \"初\", \"一\", \"清\", \"早\", \"，\", \"還\", \"沒\", \"下\", \"床\", \"，\", \"爸\", \"爸\", \"又\", \"端\", \"上\", \"一\", \"碗\", \"紅\", \"棗\", \"桂\", \"圓\", \"蓮\", \"子\", \"湯\", \"，\", \"說\", \"吃\", \"了\", \"保\", \"一\", \"年\", \"平\", \"安\", \"，\", \"原\", \"來\", \"，\", \"「\", \"年\", \"味\", \"，\", \"是\", \"親\", \"情\", \"之\", \"味\", \"」\", \"。\", \"這\", \"個\", \"幸\", \"福\", \"滋\", \"味\", \"，\", \"就\", \"這\", \"麼\", \"伴\", \"著\", \"她\", \"走\", \"過\", \"一\", \"年\", \"又\", \"一\", \"年\", \"。\", \"我\", \"的\", \"年\", \"味\", \"也\", \"與\", \"吃\", \"有\", \"關\", \"，\", \"小\", \"時\", \"住\", \"在\", \"眷\", \"村\", \"，\", \"南\", \"腔\", \"北\", \"調\", \"、\", \"夾\", \"雜\", \"流\", \"利\", \"閩\", \"南\", \"語\", \"的\", \"鄰\", \"居\", \"伯\", \"伯\", \"嬸\", \"嬸\", \"們\", \"，\", \"早\", \"早\", \"就\", \"會\", \"在\", \"陽\", \"台\", \"上\", \"，\", \"用\", \"竹\", \"竿\", \"晾\", \"上\", \"一\", \"串\", \"串\", \"的\", \"香\", \"腸\", \"臘\", \"肉\", \"，\", \"蒜\", \"苗\", \"炒\", \"臘\", \"肉\", \"是\", \"我\", \"家\", \"的\", \"必\", \"備\", \"年\", \"菜\", \"之\", \"一\", \"。\", \"午\", \"夜\", \"12\", \"點\", \"正\", \"，\", \"上\", \"香\", \"祭\", \"祖\", \"後\", \"，\", \"點\", \"燃\", \"鞭\", \"炮\", \"，\", \"遠\", \"近\", \"的\", \"鞭\", \"炮\", \"聲\", \"起\", \"起\", \"落\", \"落\", \"，\", \"嚇\", \"走\", \"年\", \"獸\", \"，\", \"象\", \"徵\", \"一\", \"元\", \"復\", \"始\", \"。\", \"如\", \"今\", \"這\", \"些\", \"傳\", \"統\", \"習\", \"俗\", \"，\", \"似\", \"乎\", \"只\", \"能\", \"在\", \"回\", \"憶\", \"裡\", \"尋\", \"找\", \"，\", \"現\", \"在\", \"孩\", \"子\", \"收\", \"到\", \"的\", \"紅\", \"包\", \"厚\", \"了\", \"，\", \"但\", \"卻\", \"可\", \"能\", \"「\", \"不\", \"識\", \"年\", \"滋\", \"味\", \"」\", \"，\", \"也\", \"是\", \"遺\", \"憾\", \">\", \"。\", \"於\", \"是\", \"我\", \"們\", \"翻\", \"遍\", \"檔\", \"案\", \"，\", \"也\", \"要\", \"找\", \"出\", \"幾\", \"張\", \"傳\", \"統\", \"紅\", \"色\", \"喜\", \"氣\", \"的\", \"年\", \"畫\", \"、\", \"春\", \"聯\", \"、\", \"鞭\", \"炮\", \"應\", \"景\", \"，\", \"讓\", \"春\", \"節\", \"的\", \"生\", \"命\", \"力\", \"繼\", \"續\", \"滋\", \"長\", \"，\", \"也\", \"希\", \"望\", \"透\", \"過\", \"這\", \"個\", \"專\", \"題\", \"讓\", \"家\", \"人\", \"親\", \"友\", \"理\", \"解\", \"，\", \"過\", \"年\", \"就\", \"是\", \"家\", \"人\", \"快\", \"樂\", \"團\", \"聚\", \"，\", \"無\", \"須\", \"問\", \"太\", \"多\", \"、\", \"想\", \"太\", \"多\", \"，\", \"徒\", \"增\", \"個\", \"人\", \"壓\", \"力\", \"。\", \"除\", \"了\", \"封\", \"面\", \"專\", \"題\", \"，\", \"本\", \"期\", \"另\", \"一\", \"個\", \"重\", \"量\", \"級\", \"議\", \"題\", \"，\", \"則\", \"介\", \"紹\", \"台\", \"灣\", \"獨\", \"步\", \"全\", \"球\", \"的\", \"石\", \"斑\", \"養\", \"殖\", \"技\", \"術\", \"，\", \"一\", \"月\", \"中\", \"，\", \"濕\", \"冷\", \"寒\", \"流\", \"發\", \"威\", \"，\", \"南\", \"部\", \"漁\", \"民\", \"冒\", \"著\", \"寒\", \"冬\", \"下\", \"水\", \"搶\", \"撈\", \"石\", \"斑\", \"和\", \"虱\", \"目\", \"魚\", \"，\", \"由\", \"於\", \"春\", \"節\", \"是\", \"石\", \"斑\", \"的\", \"旺\", \"季\", \"，\", \"希\", \"望\", \"老\", \"天\", \"眷\", \"顧\", \"，\", \"讓\", \"漁\", \"民\", \"少\", \"點\", \"損\", \"失\", \"，\", \"也\", \"讓\", \"家\", \"家\", \"戶\", \"戶\", \"「\", \"年\", \"年\", \"有\", \"餘\", \"」\", \"。\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 語料庫統計\n",
+    "regex = re.compile(u'''[\\u4E00-\\u9fa5]  | ##Chinese character\n",
+    "        \\w+[\\\\/,.&\\-]*\\w+    | ##English word, numbers and Hybrid, e.g., \"S4\"\n",
+    "        [\\uff21-\\uff3a\\uff41-\\uff5a\\uff10-\\uff19]+[\\\\/,.&\\-]*[\\uff21-\\uff3a\\uff41-\\uff5a\\uff10-\\uff19]* |               \n",
+    "        ##大小寫English word numbers and Hybrid(Full-width、Half-width)\n",
+    "        \\w{1}    | ##One English or Number\n",
+    "        ## \\s+   |   #boundarys\n",
+    "        [^\\w\\u4E00-\\u9fa5\\n\\r\\t ]    ##other characters\n",
+    "        ''',re.VERBOSE)\n",
+    "\n",
+    "# regex = re.compile(u'''\n",
+    "#          [^\\w\\u4E00-\\u9fa5\\n\\r\\t ]    ##other characters\n",
+    "#         ''',re.VERBOSE)\n",
+    "\n",
+    "text=u\"\"\"\n",
+    "春節的生命力\n",
+    "文•滕淑芬\n",
+    "\n",
+    "年味越來越淡了？似乎不少人都有此感受。都會區裡，貼春聯的人家少了，祭祖的也不多，春節真的變成一個普通的假日嗎？\n",
+    "農曆年前，104人力銀行的調查發現，將近一半（45.6%）的上班族對「準備過年」感到焦慮，焦慮主要來自「大掃除和做家事（62.7%）」、「準備紅包（57%）」，以及「想到又過了一年自己卻沒有長進（34.2%）」等。\n",
+    "做家事，想當然爾，是女主人的煩惱，男主人則可能因口袋不夠深，但又得扮演「散財童子」角色，心情格外沉重。至於年假有何計畫？104的調查顯示，43.8%的人想「在家補眠」，其次是「國內旅遊（32%）」、「回老家團聚（27%）」。\n",
+    "這項調查與我們的封面主題相呼應，對已婚婦女、單親、單身（包括同志）、弱勢與新移民家庭而言，因身分處境與經濟壓力的差異，年關，確實是他/她們的「天下第一關」。值此親人歡聚時刻，更要送上溫暖問候。\n",
+    "也許年味不再那麼濃厚，但現代人真的不喜歡過年嗎？那麼，為什麼有人會開始擔心：「春節會不會消亡？」\n",
+    "去年曾有大陸媒體因中國經濟快速發展，導致人際關係冷漠、疏離，家庭結構「割裂」，憂慮「春節的生命力」，會不會逐漸消失？而興起一陣維護傳統文化價值的熱烈討論。\n",
+    "美食作家韓良露曾談到她兒時濃濃的年味，來台五代，住在台南的阿嬤，為祭拜神明，虔誠炊蒸紅龜粿；除夕夜，父親會拿出早先做好的糯米甘酒釀，加水溫熱、再沖上雞蛋，香甜酒釀是守歲的點心；大年初一清早，還沒下床，爸爸又端上一碗紅棗桂圓蓮子湯，說吃了保一年平安，原來，「年味，是親情之味」。這個幸福滋味，就這麼伴著她走過一年又一年。\n",
+    "我的年味也與吃有關，小時住在眷村，南腔北調、夾雜流利閩南語的鄰居伯伯嬸嬸們，早早就會在陽台上，用竹竿晾上一串串的香腸臘肉，蒜苗炒臘肉是我家的必備年菜之一。午夜12點正，上香祭祖後，點燃鞭炮，遠近的鞭炮聲起起落落，嚇走年獸，象徵一元復始。如今這些傳統習俗，似乎只能在回憶裡尋找，現在孩子收到的紅包厚了，但卻可能「不識年滋味」，也是遺憾>。\n",
+    "於是我們翻遍檔案，也要找出幾張傳統紅色喜氣的年畫、春聯、鞭炮應景，讓春節的生命力繼續滋長，也希望透過這個專題讓家人親友理解，過年就是家人快樂團聚，無須問太多、想太多，徒增個人壓力。\n",
+    "除了封面專題，本期另一個重量級議題，則介紹台灣獨步全球的石斑養殖技術，一月中，濕冷寒流發威，南部漁民冒著寒冬下水搶撈石斑和虱目魚，由於春節是石斑的旺季，希望老天眷顧，讓漁民少點損失，也讓家家戶戶「年年有餘」。\n",
+    "\"\"\"\n",
+    "\n",
+    "L=regex.findall(text)\n",
+    "print len(L),json.dumps(L,ensure_ascii=False)"
    ]
   }
  ],
